fix: remove fitler categories on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -22,7 +22,7 @@
 }
 .homepage_title {
   font-family: "Russo One", sans-serif;
-  font-size: 96px;
+  /* font-size: 96px; */
   text-shadow: 5px 5px 10px black;
 }
 .navigation_title {
